--- a/src/scss/search-container.scss
+++ b/src/scss/search-container.scss
@@ -1,5 +1,5 @@
-$filter-theme-color: #3297bf;
-$head-bg-bdr-color: #3da7d0;
+$filter-theme-color: #38a0ff;
+$head-bg-bdr-color: #38a0ff;
 
 .search-container {
     .head-style {
